update about page

--- a/PetShop/about.html
+++ b/PetShop/about.html
@@ -1,1 +1,4 @@
-<p>Anything can go wrong will go wrong, exept your sweetie pet!</p>
+<center>
+    <img src="uploads/about.jpg">
+    <p> Anything can go wrong will go wrong, exept your sweetie pets! </p>
+</center>
